--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "apollo-link-context": "^1.0.9",
     "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.5",
+    "apollo-link-ws": "^1.0.9",
+    "apollo-utilities": "^1.0.21",
     "change-case": "^3.0.2",
     "classnames": "^2.2.6",
     "codemirror": "^5.39.0",
@@ -69,6 +71,7 @@
     "react-vnc-display": "^1.1.0",
     "redbox-react": "^1.5.0",
     "shebang-loader": "^0.0.1",
+    "subscriptions-transport-ws": "^0.9.15",
     "taskcluster-lib-scopes": "^10.0.1",
     "taskcluster-lib-urls": "^10.0.0",
     "typeface-roboto": "^0.0.54",
