--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@material-ui/icons": "^3.0.1",
     "@material-ui/lab": "3.0.0-alpha.19",
     "@mozilla-frontend-infra/components": "^1.3.1",
+    "@sentry/browser": "^4.1.1",
     "apollo-cache-inmemory": "^1.2.10",
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.4.2",
