Remove creation of fragment-matcher from build script (#181)

--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "yarn": ">=1.10.0"
   },
   "scripts": {
-    "build": "yarn create:fragment-matcher && dotenv webpack -- --mode production",
+    "build": "dotenv webpack -- --mode production",
     "start": "dotenv webpack-dev-server -- --mode development",
     "test": "karma start --single-run",
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
     "lint": "eslint --cache --format codeframe --ext mjs,js,jsx src test",
-    "create:fragment-matcher": "node src/scripts/queryServer"
+    "create:fragment-matcher": "dotenv node src/scripts/queryServer"
   },
   "dependencies": {
     "@material-ui/core": "^3.0.3",
