--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "classnames": "^2.2.6",
     "codemirror": "^5.39.0",
     "date-fns": "2.0.0-alpha.7",
+    "deep-sort-object": "^1.0.2",
     "deepmerge": "^2.1.1",
     "dexie": "^2.0.4",
     "docker-exec-websocket-server": "^1.3.5",
