Fix: invalid URLs (#200)

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,7 @@
   GRAPHQL_ENDPOINT = "https://taskcluster-web-server.herokuapp.com/graphql"
   GRAPHQL_SUBSCRIPTION_ENDPOINT = "wss://taskcluster-web-server.herokuapp.com/subscription"
   LOGIN_STRATEGIES = ""
+  TASKCLUSTER_ROOT_URL = "https://taskcluster.net"
 
 # Rule for Single Page Applications
 [[redirects]]
