--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-lazylog": "^3.1.3",
     "react-router-dom": "^4.3.1",
     "react-vnc-display": "^1.1.0",
+    "react-window": "^1.2.2",
     "redbox-react": "^1.5.0",
     "shebang-loader": "^0.0.1",
     "subscriptions-transport-ws": "^0.9.15",
