--- a/package.json
+++ b/package.json
@@ -7,30 +7,37 @@
   "main": "./index.js",
   "scripts": {
     "changelog": "auto-changelog",
-    "start": "neutrino styleguide:start",
-    "build": "neutrino build",
-    "lint": "neutrino lint",
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "start": "styleguidist server",
+    "build": "webpack --mode production && scripts/copyFiles",
+    "lint": "eslint --cache --format codeframe --ext js,jsx src",
     "update:authors": "scripts/authors",
-    "styleguide:build": "neutrino styleguide:build",
+    "styleguide:build": "styleguidist build",
     "semantic-release": "semantic-release"
   },
   "devDependencies": {
-    "@material-ui/core": "^1.3.1",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.2",
+    "@material-ui/core": "^3.3.0",
+    "@mozilla-frontend-infra/react-lint": "^1.1.0",
+    "@neutrinojs/react-components": "^9.0.0-beta.1",
     "@semantic-release/changelog": "^3.0.0",
     "@semantic-release/git": "^7.0.4",
     "auto-changelog": "^1.8.0",
-    "babel-register": "^6.26.0",
     "conventional-changelog-eslint": "^3.0.0",
-    "neutrino": "^8.3.0",
-    "neutrino-preset-mozilla-frontend-infra": "^4.1.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "eslint": "^5.8.0",
+    "neutrino": "^9.0.0-beta.1",
+    "prettier": "^1.14.3",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
+    "react-styleguidist": "^7.3.11",
     "semantic-release": "^15.9.16",
-    "verdaccio": "^3.8.1"
+    "verdaccio": "^3.8.1",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "peerDependencies": {
-    "@material-ui/core": "^1.3.1",
+    "@material-ui/core": "^3.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
@@ -40,7 +47,7 @@
     "error-stack-parser": "^2.0.2",
     "highlight.js": "^9.12.0",
     "is-absolute-url": "^2.1.0",
-    "markdown-it": "^8.4.1",
+    "markdown-it": "^8.4.2",
     "markdown-it-highlightjs": "^3.0.0",
     "markdown-it-link-attributes": "^2.1.0",
     "mdi-react": "^4.0.0",
