--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "husky": "^1.1.2",
     "karma": "^3.1.3",
     "karma-cli": "^1.0.1",
+    "karma-firefox-launcher": "^1.1.0",
     "lint-staged": "^7.3.0",
     "mocha": "^5.2.0",
     "neutrino": "^9.0.0-beta.1",
